--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,8 +117,7 @@
    }
 
    .section-numeros{
-       display: flex;
-       flex-direction: row;
+
    }
 
    .div-numeros{
@@ -137,11 +136,17 @@
 
    .div-texto-numeros{
        display: flex;
-       flex-direction:row;
+       flex-direction:column;
        width: 100%;
    }
 .p-numeros{
     font-family: 'Montserrat', sans-serif ;
     font-size: 18;
     font-weight: 300;
+}
+
+.div-imagem-numeros{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
