--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,31 +117,34 @@
    }
 
    .section-numeros{
-
+    display: flex;
    }
 
    .div-numeros{
-       flex-direction: column;
-       height: 100%;
+       flex-direction: row;
+       margin: 60px 40px 30px 40px
 
    }
 
    .h1-numeros{
-       color:white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 50px;
+    color: #ffff;
    }
 
    .h2-numeros{
-       color: white;
+       font-family: 'Montserrat', sans-serif;
+       font-weight: 200;
+       font-size: 18;
+       color: #5A5757;
    }
 
    .div-texto-numeros{
-       display: flex;
-       flex-direction:column;
-       width: 100%;
    }
 .p-numeros{
     font-family: 'Montserrat', sans-serif ;
-    font-size: 18;
+    font-size: 18px;
     font-weight: 300;
 }
 
